--- a/config/crd/bases/criu.org_checkpointrestoreoperators.yaml
+++ b/config/crd/bases/criu.org_checkpointrestoreoperators.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.12.0
+    controller-gen.kubebuilder.io/version: v0.15.0
   name: checkpointrestoreoperators.criu.org
 spec:
   group: criu.org
@@ -21,14 +21,19 @@ spec:
           API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -40,8 +45,72 @@ spec:
                 description: 'Important: Run "make" to regenerate code after modifying
                   this file'
                 type: string
-              maxCheckpointsPerContainer:
-                type: integer
+              containerPolicies:
+                items:
+                  properties:
+                    container:
+                      type: string
+                    maxCheckpoints:
+                      format: int64
+                      type: integer
+                    maxTotalSize:
+                      format: int64
+                      type: integer
+                    namespace:
+                      type: string
+                    pod:
+                      type: string
+                  type: object
+                type: array
+              globalPolicy:
+                properties:
+                  maxCheckpointSize:
+                    format: int64
+                    type: integer
+                  maxCheckpointsPerContainer:
+                    type: integer
+                  maxCheckpointsPerNamespace:
+                    type: integer
+                  maxCheckpointsPerPod:
+                    type: integer
+                  maxTotalSizePerContainer:
+                    format: int64
+                    type: integer
+                  maxTotalSizePerNamespace:
+                    format: int64
+                    type: integer
+                  maxTotalSizePerPod:
+                    format: int64
+                    type: integer
+                type: object
+              namespacePolicies:
+                items:
+                  properties:
+                    maxCheckpoints:
+                      format: int64
+                      type: integer
+                    maxTotalSize:
+                      format: int64
+                      type: integer
+                    namespace:
+                      type: string
+                  type: object
+                type: array
+              podPolicies:
+                items:
+                  properties:
+                    maxCheckpoints:
+                      format: int64
+                      type: integer
+                    maxTotalSize:
+                      format: int64
+                      type: integer
+                    namespace:
+                      type: string
+                    pod:
+                      type: string
+                  type: object
+                type: array
             type: object
           status:
             description: CheckpointRestoreOperatorStatus defines the observed state
