feat: Add count-based checkpoint retention policies
- Introduced global, container, pod, and namespace-level
  policies for checkpoint retention, all based on count limits.
- Updated CRD definitions to store the newly added policies.
- Added a flag `applyPoliciesImmediately` to enable immediate
  application of policies upon their update or creation.
- Implemented logic to prioritize container, pod, and
  namespace-specific policies over global policies.
- Updated the sample
  (`/config/samples/_v1_checkpointrestoreoperator.yaml`)
  with new policies.

Signed-off-by: Parthiba-Hazra <parthibahazra@gmail.com>

--- a/config/crd/bases/criu.org_checkpointrestoreoperators.yaml
+++ b/config/crd/bases/criu.org_checkpointrestoreoperators.yaml
@@ -41,12 +41,57 @@ spec:
             description: CheckpointRestoreOperatorSpec defines the desired state of
               CheckpointRestoreOperator
             properties:
+              applyPoliciesImmediately:
+                type: boolean
               checkpointDirectory:
                 description: 'Important: Run "make" to regenerate code after modifying
                   this file'
                 type: string
-              maxCheckpointsPerContainer:
-                type: integer
+              containerPolicies:
+                items:
+                  properties:
+                    container:
+                      type: string
+                    maxCheckpoints:
+                      format: int64
+                      type: integer
+                    namespace:
+                      type: string
+                    pod:
+                      type: string
+                  type: object
+                type: array
+              globalPolicy:
+                properties:
+                  maxCheckpointsPerContainer:
+                    type: integer
+                  maxCheckpointsPerNamespace:
+                    type: integer
+                  maxCheckpointsPerPod:
+                    type: integer
+                type: object
+              namespacePolicies:
+                items:
+                  properties:
+                    maxCheckpoints:
+                      format: int64
+                      type: integer
+                    namespace:
+                      type: string
+                  type: object
+                type: array
+              podPolicies:
+                items:
+                  properties:
+                    maxCheckpoints:
+                      format: int64
+                      type: integer
+                    namespace:
+                      type: string
+                    pod:
+                      type: string
+                  type: object
+                type: array
             type: object
           status:
             description: CheckpointRestoreOperatorStatus defines the observed state
