--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -13,6 +13,11 @@ jobs:
         with:
           go-version: '1.21'
 
+      - name: Install ShellCheck and shfmt
+        run: |
+          sudo apt update
+          sudo apt install -y shellcheck shfmt
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
@@ -26,6 +31,11 @@ jobs:
         uses: codespell-project/actions-codespell@v2
         with:
           skip: vendor,*.svg
+      
+      - name: ShellCheck and shfmt
+        run: |
+          shellcheck ./test/*.sh
+          shfmt -d ./test/*.sh
 
   gomod:
     runs-on: ubuntu-latest
