--- a/test/kind-config.yaml
+++ b/test/kind-config.yaml
@@ -5,3 +5,7 @@ nodes:
   extraMounts:
   - hostPath: /var/lib/kubelet/checkpoints
     containerPath: /var/lib/kubelet/checkpoints
+containerdConfigPatches:
+- |-
+  [plugins."io.containerd.grpc.v1.cri".registry]
+    config_path = "/etc/containerd/certs.d"
