feat: Implement orphan retention policies
- Added support for orphan retention policies at the global,
  namespace, pod, and container levels.
- Introduced the `retainOrphan` field in each policy type to
  control the retention of orphan checkpoints.
- Updated the policy application logic to delete all orphan
  checkpoints when `retainOrphan` is set to false.
- Implemented a PodWatcher to monitor pod deletions and apply
  policies immediately when a resource is deleted.

Signed-off-by: Parthiba-Hazra <parthibahazra@gmail.com>

--- a/config/crd/bases/criu.org_checkpointrestoreoperators.yaml
+++ b/config/crd/bases/criu.org_checkpointrestoreoperators.yaml
@@ -62,6 +62,8 @@ spec:
                       type: string
                     pod:
                       type: string
+                    retainOrphan:
+                      type: boolean
                   type: object
                 type: array
               globalPolicy:
@@ -80,6 +82,8 @@ spec:
                     type: integer
                   maxTotalSizePerPod:
                     type: integer
+                  retainOrphan:
+                    type: boolean
                 type: object
               namespacePolicies:
                 items:
@@ -92,6 +96,8 @@ spec:
                       type: integer
                     namespace:
                       type: string
+                    retainOrphan:
+                      type: boolean
                   type: object
                 type: array
               podPolicies:
@@ -107,6 +113,8 @@ spec:
                       type: string
                     pod:
                       type: string
+                    retainOrphan:
+                      type: boolean
                   type: object
                 type: array
             type: object
